fixing logos on mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -293,6 +293,10 @@ body {
     padding: 0px 20px;
 }
 
+.logoSwap img.color {
+        display: none;
+}
+
 @media screen and (min-width:1200px) {
     .navbar-default {
         padding: 25px 0;
